--- a/doc/trunk/design/syn/S04.pod
+++ b/doc/trunk/design/syn/S04.pod
@@ -14,7 +14,7 @@ Larry Wall <larry@wall.org>
   Date: 19 Aug 2004
   Last Modified: 29 Jan 2007
   Number: 4
-  Version: 49
+  Version: 50
 
 This document summarizes Apocalypse 4, which covers the block and
 statement syntax of Perl.
@@ -493,6 +493,14 @@ the C<for> loop is in void context.
 
 A C<gather> is not considered a loop, but it is easy to combine with a loop
 statement as in the examples above.
+
+If any function called as part of a C<take> list asks what its context
+is, it will be told it was called in list context regardless of the
+eventual binding of the returned C<Capture>.  If that is not the
+desired behavior you must coerce the call to an appropriate context.
+In any event, such a function is called only once at the time the
+C<Capture> object is generated, not when it is bound (which could
+happen more than once).
 
 =head2 Other C<do>-like forms
 
