--- a/doc/trunk/design/syn/S04.pod
+++ b/doc/trunk/design/syn/S04.pod
@@ -444,7 +444,7 @@ specified by calling the C<take> list prefix operator one or more times
 within the dynamic scope of the C<gather>.  The C<take> function's
 signature is like that of C<return>; it merely captures the C<Capture>
 of its argments without imposing any additional constraints (in the
-absense of context propagation by the optimizer).  The value returned
+absence of context propagation by the optimizer).  The value returned
 by the C<take> to its own context is that same C<Capture> object (which
 is ignored when the C<take> is in void context).  Regardless of the
 C<take>'s context, the C<Capture> object is also added to the list of
