Another idea for *+ vs *- in subscripts
git-svn-id: http://svn.pugscode.org/pugs@23704 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S09.pod
+++ b/doc/trunk/design/syn/S09.pod
@@ -802,6 +802,12 @@ canonical way to get the first element, unless
 
 works...
 
+Alternately, C<*+0> is the first element, and the subscript dwims
+from the front or back depending on the sign.  That would be more
+symmetrical, but makes the idea of C<*> in a subscript a little more
+distant from the notion of "all the keys", which would be a loss,
+and potentially makes C<+*> not mean the number of keys.
+
 Conjecture: we might provide a way to declare a modular subscript that
 emulates the dwimmery, perhaps by using a subset type:
 
