Braino spotted by TSa++
git-svn-id: http://svn.pugscode.org/pugs@23705 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S09.pod
+++ b/doc/trunk/design/syn/S09.pod
@@ -786,7 +786,7 @@ using C<*>, the C<Whatever> object:
 When you use C<*> with C<+> and C<->, it creates a value of C<Whatever>
 but C<Num>, which the array subscript interpreter will interpret as the
 subscript one off the end of that dimension of the array.  The lower
-right corner of a two dimesional array is C<@array[*-1, *-1]>.
+right corner of a two dimesional array is C<@array[*-1; *-1]>.
 
 This policy has the fortuitous outcome that arrays declared with negative
 subscripts will never interpret negative subscripts as relative to the end:
